# curator

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: duration.rs  error.rs  history.rs  ideas.rs  main.rs  manifest.rs
crates/sketch/: Cargo.toml
crates/sketch/src/: history.rs  lib.rs  source.rs
