[package]
name = "curator_sketch"
version = "0.1.1"
authors = ["Arnau Siches <asiches@gmail.com>"]
edition = "2018"
description = "A library to sketch ideas for Curator."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
console = "0.11"
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
